--- a/syntax-highlighting/index.html
+++ b/syntax-highlighting/index.html
@@ -2144,8 +2144,13 @@
 </tr>
 <tr>
 <td><code>ignoredFormStyle</code></td>
-<td>Style of <code>#_...</code> form</td>
+<td>Style of <code>#_...</code> forms</td>
 <td><code>{"textDecoration": "none; opacity: 0.5"}</code></td>
+</tr>
+<tr>
+<td><code>ignoredTopLevelFormStyle</code></td>
+<td>Style of <code>#_...</code> forms at the top level. (If not set, uses <code>ignoredFormStyle</code>)</td>
+<td><code>{ "textDecoration": "none; text-shadow: 2px 2px 5px rgba(255, 215, 0, 0.75)" }</code></td>
 </tr>
 <tr>
 <td><code>commentFormStyle</code></td>
