--- a/when-clauses/index.html
+++ b/when-clauses/index.html
@@ -2016,6 +2016,9 @@
 <li><code>calva:cursorAfterComment</code>: <code>true</code> when the cursor is adjacent after a line comment</li>
 <li><code>calva:cursorAtStartOfLine</code>: <code>true</code> when the cursor is at the start of a line including any leading whitespace</li>
 <li><code>calva:cursorAtEndOfLine</code>: <code>true</code> when the cursor is at the end of a line including any trailing whitespace</li>
+<li><code>calva:projectRoot</code>: A string with the absolute path to the repl project root, <em>without trailing slash</em></li>
+<li><code>calva:ns</code>: A string with the current namespace</li>
+<li><code>calva:replSessionType</code>: <code>clj</code>, or <code>cljs</code> depending on the file type of the current file</li>
 </ul>
 
 
